--- a/sprawozdanie1.tex
+++ b/sprawozdanie1.tex
@@ -17,19 +17,31 @@
 \usepackage[T1]{polski}
 \usepackage[utf8]{inputenc}     % niepotrzebne gdy pierwsza linia pliku to "%& --translate-file=il2-pl"
 
-\hoffset=-3.0cm                 % Mniejszy lewy margines
-\textwidth=18cm                 % szerzej
-\evensidemargin=0pt
+%\hoffset=-3.0cm                 % Mniejszy lewy margines
+%\textwidth=18cm                 % szerzej
+%\evensidemargin=0pt
 
-\voffset=-3cm                   % Mniejszy gorny margines
-\textheight=27cm                % szerzej wzdluz
+%\voffset=-3cm                   % Mniejszy gorny margines
+%\textheight=27cm                % szerzej wzdluz
 
-\setlength{\parindent}{0pt}             % No paragraph indentation
-\setlength{\parskip}{\medskipamount}    % Space between paragraphs
-\raggedbottom                           % bez rozciagania strony
+%\setlength{\parindent}{0pt}             % No paragraph indentation
+%\setlength{\parskip}{\medskipamount}    % Space between paragraphs
+%\raggedbottom                           % bez rozciagania strony
+
+\title{Sprawozdanie z sieci}
+\author{Konrad Borowski, Paweł Szczepanowski}
 
 \begin{document}
-\thispagestyle{empty}                   % bez numeracji stron
+%\thispagestyle{empty}                   % bez numeracji stron
 
+\maketitle
+
+\section{Cel}
+
+\section{Co robimy}
+
+\section{Algorytm}
+
+\section{Scenariusze}
 
 \end{document}
