--- a/sprawozdanie1.tex
+++ b/sprawozdanie1.tex
@@ -94,6 +94,15 @@ Nie wiem jak to działa. Powiem więcej -- nie mam prawa wiedzieć jak to dział
 Jest to opatentowany i~w~teorii tajny protokoł Microsoftu. Nie mniej jednak,
 protokoł jest podobny do VNC w~stopniu w~którym mogę z~niego korzystać.
 
+\subsection{VirtualBox}
+
+VirtualBox to maszyna wirtualna która pozwala na uruchamianie systemów
+operacyjnych kiedy system operacyjny jest włączony. Implementacja jest
+w~dużej części intuicyjna, jednakże włączenie sieciowego systemu operacyjnego
+w~sieci ZETIS wymaga włączenia mostkowania w~celu udostępnienia dostępu
+do sieci lokalnej i~włączenia własnościowych dodatków do VirtualBox,
+zamiast korzystania z~systemu NAT.
+
 \section{Algorytm}
 
 \subsection{SSH}
