--- a/sprawozdanie1.tex
+++ b/sprawozdanie1.tex
@@ -100,8 +100,8 @@ VirtualBox to maszyna wirtualna która pozwala na uruchamianie systemów
 operacyjnych kiedy system operacyjny jest włączony. Implementacja jest
 w~dużej części intuicyjna, jednakże włączenie sieciowego systemu operacyjnego
 w~sieci ZETIS wymaga włączenia mostkowania w~celu udostępnienia dostępu
-do sieci lokalnej i~włączenia własnościowych dodatków do VirtualBox,
-zamiast korzystania z~systemu NAT.
+do sieci lokalnej zamiast korzystania z~systemu NAT i~włączenia
+własnościowych dodatków do VirtualBox.
 
 \section{Algorytm}
 
@@ -206,9 +206,6 @@ volt% xauth add :0 . b138356d5c3af2dc894fcb11dd0c5ca
 volt% xcalc
 \end{verbatim}
 
-
 \end{itemize}
-
-\section{Scenariusze}
 
 \end{document}
