--- a/sprawozdanie1.tex
+++ b/sprawozdanie1.tex
@@ -114,11 +114,11 @@ własnościowych dodatków do VirtualBox.
 \begin{verbatim}
 $ ssh-keygen 
 Generating public/private rsa key pair.
-Enter file in which to save the key (/home/xfix/.ssh/id_rsa): 
+Enter file in which to save the key (/home/szczepp3/.ssh/id_rsa): 
 Enter passphrase (empty for no passphrase): 
 Enter same passphrase again: 
-Your identification has been saved in /home/xfix/.ssh/id_rsa.
-Your public key has been saved in /home/xfix/.ssh/id_rsa.pub.
+Your identification has been saved in /home/szczepp3/.ssh/id_rsa.
+Your public key has been saved in /home/szczepp3/.ssh/id_rsa.pub.
 The key fingerprint is:
 SHA256:Fg8i9p7DYA6SSU5Mc7DnYc+ccQHg7ncHDzZWsE22pPA xfix@orange
 The key's randomart image is:
