--- a/c5.tex
+++ b/c5.tex
@@ -98,4 +98,19 @@ Można sprawdzić widoczność używając następującego polecenia.
 showmount -e localhost
 \end{verbatim}
 
+\section{Serwer SMB}
+
+Można zainstalować go korzystając z~polecenia.
+
+\begin{verbatim}
+sudo pacman -S samba
+\end{verbatim}
+
+Jego domyślna konfiguracja jest umieszczona w~pliku \verb|/etc/samba/smb.conf.default|. Plik
+ten można skopiować do \verb|/etc/samba/smb.conf|, a~następnie edytować. Lista folderów
+i~drukarek współdzielonych jest dostępna w~sekcji \verb|Share Definitions|.
+
+O~ile system samba wykorzystuje system logowania Linux, wykorzystuje on oddzielną bazę haseł.
+Hasła można zmienić korzystając z~\verb|smbpasswd|.
+
 \end{document}
