--- a/c1.tex
+++ b/c1.tex
@@ -219,7 +219,7 @@ k5/unix:0  MIT-MAGIC-COOKIE-1  b138356d5c3af2dc894fcb11dd0c5ca
       się od \verb|b138| jest kluczem wyświetlanym przez \verb|xauth list|.
 
 \begin{verbatim}
-volt% xauth add :0 . b138356d5c3af2dc894fcb11dd0c5ca
+volt% xauth add k5:0 . b138356d5c3af2dc894fcb11dd0c5ca
 \end{verbatim}
 
 \item Uruchomienie programu w~celu przetestowania konfiguracji.
